--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "eslint": "^7.8.1",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "2.5.1"
+  },
+  "dependencies": {
+    "parse-options": "^1.0.2"
   }
 }
