--- a/lib/server/.eslintrc
+++ b/lib/server/.eslintrc
@@ -128,7 +128,7 @@
       }
     ],
     "arrow-parens": ["error", "always"],
-    "arrow-body-style": ["error", "as-needed"],
+    "arrow-body-style": ["off"],
     "arrow-spacing": ["error"],
     "no-useless-rename": ["error"],
     "no-var": ["error"],
