--- a/lib/server/docker-compose.yml
+++ b/lib/server/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       PGDATA: '/var/lib/postgresql/data/pgdata'
     volumes:
       - ./db:/docker-entrypoint-initdb.d
-      - .:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+volumes:
+  pgdata:
+    external: true
